--- a/heroku.yml
+++ b/heroku.yml
@@ -1,9 +1,21 @@
-build: 
-  docker: 
+setup: 
+  addons:
+    - plan: heroku-postgresql
+      as: DATABASE
+build:
+  docker:
     web: Dockerfile
-run: 
+run:
   web: npm start
-release:
-  image: web
-  command: 
-    - npm run migrate up
+
+
+
+# build: 
+#   docker: 
+#     web: Dockerfile
+# run: 
+#   web: npm start
+# release:
+#   image: web
+#   command: 
+#     - npm run migrate up
